<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.neo4j</groupId>
  <artifactId>neo4j-dwh-connector</artifactId>
  <version>1.0.1</version>
  <name>${project.artifactId}</name>
  <description>This is the Neo4j DWH Connector supposed to work in combination with Apache Spark</description>
  <inceptionYear>2022</inceptionYear>

  <organization>
    <name>Neo4j, Inc.</name>
    <url>http://neo4j.com/</url>
  </organization>
  <developers>
    <developer>
      <id>conker84</id>
      <name>Andrea Santurbano</name>
    </developer>
  </developers>

  <url>https://github.com/neo4j-contrib/neo4j-dwh-connector</url>
  <scm>
    <url>https://github.com/neo4j-contrib/neo4j-dwh-connector</url>
  </scm>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <comments>
        Note that this license is for the project itself,
        and not for its dependencies.
      </comments>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <encoding>UTF-8</encoding>
    <spec2.version>4.2.0</spec2.version>
    <jackson-databind.version>2.17.2</jackson-databind.version>
    <junit.version>4.13.2</junit.version>
    <xbean.version>4.10</xbean.version>
    <common-cli.version>1.9.0</common-cli.version>

    <powermock.version>2.0.9</powermock.version>
    <testcontainers.version>1.18.3</testcontainers.version>
    <bigquery.spark.version>0.32.0</bigquery.spark.version>
    <snowflake.spark.version>2.10.0-spark_3.2</snowflake.spark.version>
    <snowflake.jdbc.version>3.13.15</snowflake.jdbc.version>
    <redshift.spark.version>5.0.4</redshift.spark.version>
    <redshift.jdbc.version>2.1.0.5</redshift.jdbc.version>
    <aws-java-sdk.version>1.12.178</aws-java-sdk.version>
    <hadoop-aws.version>3.3.1</hadoop-aws.version>
    <spark-mssql-connector_version>1.1.0</spark-mssql-connector_version>
    <spark-mssql-connector-artifactId>spark-mssql-connector_${scala.binary.version}</spark-mssql-connector-artifactId>
    <!--    <scala.version>2.12.12</scala.version>-->
    <!--    <spark.version>3.2.1</spark.version>-->
    <!--    <scala.binary.version>2.12</scala.binary.version>-->
    <!-- This is empty because we use it for the deploy process -->
    <scala.binary.version/>
    <spark-bigquery-with-dependencies-artifactId>
      spark-bigquery-with-dependencies_${scala.binary.version}
    </spark-bigquery-with-dependencies-artifactId>
    <neo4j-connector-apache-spark-artifactId>neo4j-connector-apache-spark_${scala.binary.version}</neo4j-connector-apache-spark-artifactId>
    <netty-bom.version>4.1.123.Final</netty-bom.version>
  </properties>


  <dependencies>
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_${scala.binary.version}</artifactId>
      <version>${spark.version}</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.module</groupId>
          <artifactId>jackson-module-scala_${scala.binary.version}</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xbean</groupId>
          <artifactId>xbean-asm6-shaded</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_${scala.binary.version}</artifactId>
      <version>${spark.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.xbean</groupId>
      <artifactId>xbean-asm6-shaded</artifactId>
      <version>${xbean.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-scala_${scala.binary.version}</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>

    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>${common-cli.version}</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>${spark-mssql-connector-artifactId}</artifactId>
      <version>${spark-mssql-connector_version}</version>
      <scope>test</scope>
    </dependency>


    <!--    <dependency>-->
    <!--      <groupId>io.github.spark-redshift-community</groupId>-->
    <!--      <artifactId>spark-redshift_${scala.binary.version}</artifactId>-->
    <!--      <version>${redshift.spark.version}</version>-->
    <!--      <scope>test</scope>-->
    <!--    </dependency>-->
    <dependency>
      <groupId>com.github.conker84</groupId>
      <artifactId>spark-redshift</artifactId>
      <version>5.0.4.1-SNAPSHOT</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-avro_${scala.binary.version}</artifactId>
      <version>${spark.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.amazon.redshift</groupId>
      <artifactId>redshift-jdbc42</artifactId>
      <version>${redshift.jdbc.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-java-sdk</artifactId>
      <version>${aws-java-sdk.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-aws</artifactId>
      <version>${hadoop-aws.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>${neo4j-connector-apache-spark-artifactId}</artifactId>
      <version>${neo4j.spark.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.google.cloud.spark</groupId>
      <artifactId>${spark-bigquery-with-dependencies-artifactId}</artifactId>
      <version>${bigquery.spark.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>net.snowflake</groupId>
      <artifactId>spark-snowflake_${scala.binary.version}</artifactId>
      <version>${snowflake.spark.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>net.snowflake</groupId>
      <artifactId>snowflake-jdbc</artifactId>
      <version>${snowflake.jdbc.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>neo4j</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-bom</artifactId>
        <version>${netty-bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <profiles>
    <!-- scala profiles -->
    <profile>
      <id>scala-2.12</id>
      <properties>
        <!-- 2.12.15 is the minimum, because of https://github.com/scala/bug/issues/12419 -->
        <!-- required fix is https://github.com/scala/scala/pull/9676 -->
        <scala.version>2.12.20</scala.version>
        <scala.binary.version>2.12</scala.binary.version>
      </properties>
    </profile>
    <profile>
      <id>scala-2.13</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <scala.version>2.13.16</scala.version>
        <scala.binary.version>2.13</scala.binary.version>
        <!--
          N.B. the following packages are not available yet for Scala 2.13,
          we use Scala 2.12 only for allowing the compilation
        -->
        <spark-mssql-connector-artifactId>spark-mssql-connector_2.12</spark-mssql-connector-artifactId>
      </properties>
    </profile>
    <!-- end scala profiles -->
    <!-- spark profiles -->
    <profile>
      <id>spark-3</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <spark.version>3.5.6</spark.version>
        <neo4j.spark.version>5.3.8_for_spark_3</neo4j.spark.version>
      </properties>
    </profile>
    <!-- end spark profiles -->
    <!-- neo4j profiles -->
    <profile>
      <id>neo4j-4.4</id>
      <properties>
        <neo4j.version>4.4</neo4j.version>
      </properties>
    </profile>
    <profile>
      <id>neo4j-5</id>
      <properties>
        <neo4j.version>5</neo4j.version>
      </properties>
    </profile>
    <profile>
      <id>neo4j-2025</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <neo4j.version>2025</neo4j.version>
      </properties>
    </profile>
    <!-- end neo4j profiles -->
  </profiles>

  <build>
    <sourceDirectory>src/main/scala</sourceDirectory>
    <testSourceDirectory>src/test/scala</testSourceDirectory>
    <resources>
      <resource>
        <directory>python</directory>
        <excludes>
          <exclude>**/test/**</exclude>
        </excludes>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
        <filtering>true</filtering>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>org.neo4j.dwh.connector.Neo4jDWHConnector</mainClass>
            </manifest>
          </archive>
          <finalName>${project.artifactId}-${project.version}</finalName>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <version>4.5.4</version>
        <executions>
          <execution>
            <goals>
              <goal>add-source</goal>
              <goal>compile</goal>
              <goal>testCompile</goal>
              <goal>doc-jar</goal>
            </goals>
            <configuration>
              <args>
                <arg>-dependencyfile</arg>
                <arg>${project.build.directory}/.scala_dependencies</arg>
<!--                <arg>-Ypartial-unification</arg>-->
              </args>
            </configuration>
            <phase>process-resources</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.21.0</version>
        <configuration>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <includes>
            <include>**/*Test.*</include>
            <include>**/*IT.*</include>
          </includes>
          <trimStackTrace>false</trimStackTrace>
          <!-- copied from https://github.com/apache/spark/blob/3941369d13ad885eac21bd8ac1769aaf1a325c5a/launcher/src/main/java/org/apache/spark/launcher/JavaModuleOptions.java -->
          <argLine>
            -XX:+IgnoreUnrecognizedVMOptions
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
            --add-opens=java.base/java.io=ALL-UNNAMED
            --add-opens=java.base/java.net=ALL-UNNAMED
            --add-opens=java.base/java.nio=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
            --add-opens=java.base/sun.security.action=ALL-UNNAMED
            --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
            --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
